Use external secrets in drone config
# ---------------------------------------
# **Feat: A new feature**
#🎁
# **Fix: A bug fix**
#🐛
# **Docs:**
#📖
# **Style:**
#👁
# Refactor:
#🛠
# **Perf:**
#🚀
# **Test:**
#🔎
# **Chore:**
#⚙️

# Why was this change made?

# Relevant Links
Resolves: #
See also: #

--- a/.drone.yml
+++ b/.drone.yml
@@ -22,3 +22,17 @@ steps:
       from_secret: docker_hub_password
     repo: digitalwerber/cloudflare-workers-drone-plugin
     tags: latest
+
+---
+kind: secret
+name: docker_hub_user
+get:
+  path: /int/dockerhub/digitalwerber
+  name: user
+
+---
+kind: secret
+name: docker_hub_password
+get:
+  path: /int/dockerhub/digitalwerber
+  name: password
